--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,8 +1,85 @@
-<%= form_tag("/search/", :method => "get") do %>
-  <%= label_tag(:make, "Marca:") %>
-  <%= select_tag "make", options_from_collection_for_select(@marcas, "id", "name"), :prompt => "Select Make" %><br />
-	<%= label_tag(:state, "State:") %>
-  <%= select_tag "state", options_from_collection_for_select(@states, "id", "name"), :prompt => "Select State" %><br />
-	
-	<%= submit_tag("Search") %>
-<% end %>
+<div class="container-narrow">
+	<%= render "partials/header" %> 
+  <hr>
+  
+  <div class="jumbotron">
+    <h1 class="">Super awesome marketing speak!</h1>
+    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    <a class="btn btn-large btn-success" href="#">Sign up today</a>
+  </div>
+  
+  <hr class="">
+  
+  <div class="row-fluid marketing">
+    <div class="span6">
+      <h4>Subheading</h4>
+      <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+      
+      <h4>Subheading</h4>
+      <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+      
+      <h4>Subheading</h4>
+      <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    </div>
+    
+    <div class="span6">
+      <h4 class="">Subheading</h4>
+      <p class="">Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+      
+      <h4>Subheading</h4>
+      <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+      
+      <h4>Subheading</h4>
+      <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    </div>
+  </div>
+  
+  <hr>
+  
+  <div class="footer">
+    <p>© Company 2013</p>
+  </div>
+  
+</div> <!-- /container -->
+
+
+<style>
+  
+  body {
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+  
+  /* Custom container */
+  .container-narrow {
+    margin: 0 auto;
+    max-width: 700px;
+  }
+  .container-narrow > hr {
+    margin: 30px 0;
+  }
+  
+  /* Main marketing message and sign up button */
+  .jumbotron {
+    margin: 60px 0;
+    text-align: center;
+  }
+  .jumbotron h1 {
+    font-size: 72px;
+    line-height: 1;
+  }
+  .jumbotron .btn {
+    font-size: 21px;
+    padding: 14px 24px;
+  }
+  
+  /* Supporting marketing content */
+  .marketing {
+    margin: 60px 0;
+  }
+  .marketing p + h4 {
+    margin-top: 28px;
+  }
+  
+</style>
+
