--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,14 @@
 //
 // Example:
 // @linkColor: #ff0000;
+h3{
+  font-size: 16px;
+  display: inline-block;
+  margin-top: 0px;
+  line-height: 11px;
+}
+.media{
+  padding: 15px;
+}
+
+
