--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -1,14 +1,34 @@
 <% if !@results.empty? %>
-	<% @results.each do |data| %>
-  	<div><a target="_blank" href="<%= data[0]['url'] %>"><img class="img-polaroid" src="<%= raw data[0]['image'] %>" width="120" /></a></div>
-    <a target="_blank" href="<%= data[0]['url'] %>"><%= data[0]['title'] %></a>
-    <div><%= number_to_currency(data[0]['price'],:unit => "$") %></div>
-    <div><%=  data[0]['location'] %></div>
-    <div><%=  data[0]['phone'] %></div>
-    <div><%=  data[0]['comment'] %></div>
-    <div><%=  data[0]['color'] %></div>
-    <div><%=  data[0]['km'] %></div>
+	<% @results.each do |data| %>		
+		<div class="media">
+      
+  		<a data-toggle="modal" class="pull-left" href="#myModal<%=  data[0]['id'] %>" ><img align="left" class="img-polaroid" src="<%= raw data[0]['image'] %>" width="120" /></a>
+      
+      <div class="media-body">
+        <h3 class="media-heading"><a target="_blank" href="<%= data[0]['url'] %>"><%= data[0]['title'] %></a></h3>
+        <div><%= number_to_currency(data[0]['price'],:unit => "$") %></div>
+        <div><%=  data[0]['location'] %></div>
+        <div><%=  data[0]['phone'] %></div>
+        <div><%=  data[0]['comment'] %></div>
+        <div><%=  data[0]['color'] %></div>
+        <div><%=  data[0]['km'] %></div>
+        <div class="offset3">
+          <a class="btn btn-mini" href="https://twitter.com/share?url=<%= data[0]['url'] %>" target="_blank" ><i class="icon-twitter"></i> Tweet</a>
+          <a class="btn btn-mini" href="http://www.facebook.com/share.php?u=<%= data[0]['url'] %>" target="_blank"><i class="icon-facebook"></i> Share</a>     
+        </div>
+      </div>
+      <!-- Modal -->
+    <div id="myModal<%=  data[0]['id'] %>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <img   src="<%= raw data[0]['image_big'] %>" width="540" />
+      </div>
+    </div>
+    <!-- Modal -->
+		</div>
   <% end %>
+	
+<button data-make="<%= @marca %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block" value="1" type="button">More</button>
 <% else %>
 		<div class="well well-large">
       No Results...
