--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,17 +1,29 @@
 <div class="container-narrow">
   <%= render "partials/header" %>
-	<hr>
+  <hr>
   	<div class="row">
       <%= form_tag("/search/result", :method => "get") do %>
-      <div class="span3">
+      <div class="span2">
       	<%= label_tag(:make, "Marca:") %>
-      	<%= select_tag "make", options_from_collection_for_select(@marcas, "id", "name"), :prompt => "Select Make" %>
+        <%= select_tag "make", options_from_collection_for_select(@marcas, "id", "name"), :class => "span2", :prompt => "Select Make" %>
       </div>
-	  	<div class="span3">
+	  	<div class="span2">
         <%= label_tag(:state, "State:") %>
-        <%= select_tag "state", options_from_collection_for_select(@states, "id", "name"), :prompt => "Select State" %>
+        <%= select_tag "state", options_from_collection_for_select(@states, "id","name"), :class => "span2", :prompt => "Select State" %>
       </div>
-      <div class="span9">
+      <div class="span2">
+        <%= label_tag(:model, "Model:") %>
+        <%= select_tag "model", options_for_select(["model",1]), :class => "span2", :disabled => true, :prompt => "Model" %>             
+      </div>
+      <div class="span2">
+      	<%= label_tag(:price1, "From:") %>
+        <%= select_tag "price1", options_for_select(range), :class => "span2", :prompt => "From" %>        
+      </div>
+      <div class="span2">
+      	<%= label_tag(:price2, "To:") %>
+        <%= select_tag "price2", options_for_select(range), :class => "span2", :prompt => "To" %>        
+      </div>
+      <div class="span7">
         <%= submit_tag  "Search", :id => "submit", :class => "btn" %>
       </div>
     	<% end %>
@@ -22,7 +34,9 @@
   <!-- Resultados -->
   <div id="resultados">
     <div class="well well-large">Start searching</div>
+    <div class="row text-center loading"><img  src="assets/359.gif" width="40" /></div>
   </div>
+
   <hr>
   
   <div class="footer">
