--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -12,58 +12,12 @@
       <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
     </ul>
   </div>
-  <!--
-  <section class="top-bar-section">
-   
-    <ul class="right">
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="#">Main Item 1</a>
-        <ul class="dropdown">
-          <li><label>Section Name</label></li>
-          <li class="has-dropdown">
-            <a href="#" class="">Has Dropdown, Level 1</a>
-            <ul class="dropdown">
-              <li><a href="#">Dropdown Options</a></li>
-              <li><a href="#">Dropdown Options</a></li>
-              <li><a href="#">Level 2</a></li>
-              <li><a href="#">Subdropdown Option</a></li>
-              <li><a href="#">Subdropdown Option</a></li>
-              <li><a href="#">Subdropdown Option</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><label>Section Name</label></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
-      <li><a href="#">Main Item 2</a></li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="#">Main Item 3</a>
-        <ul class="dropdown">
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  -->
 </nav>
 
 <div class="row second-bar">
   <div class="large-10 container">
     <div class="small-8 columns"><h2>Busca, compra y vende mas fácil</h2></div>
+    <div class="large-2 columns location"></div>
     <a href="#" id="new-advertise" class="button right">Anúnciate</a>
   </div>
 </div>
