--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,7 @@
-
+<% 
+# Get location
+#@s = Geocoder.search(request.remote_ip)
+%>
 <%= render "partials/header" %>
 
 <div class="container busqueda">
