--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -1,31 +1,24 @@
+
 <% if !@results.blank? %>
 	<% @results.each do |data| %>		
 		<div class="media columns">
       
       <div class="large-3 columns">
-  		  <a data-toggle="modal" class="pull-left" href="#myModal<%=  data[0]['id'] %>" ><img align="left" class="img-polaroid" src="<%= raw data[0]['image'] %>" width="120" /></a>
+  		  <a class="pull-left" href="<%= data.url %>" ><img align="left" class="img-polaroid" src="<%= raw data.image %>" width="120" /></a>
       </div>
       <div class="media-body large-9 columns">
-        <h3 class="media-heading"><a target="_blank" href="<%= data[0]['url'] %>"><%= data[0]['title'] %></a></h3>
-        <div><%= number_to_currency(data[0]['price'],:unit => "$") %></div>
-        <div><%=  data[0]['location'] %></div>
-        <div><%=  data[0]['phone'] %></div>
-        <div><%=  data[0]['comment'] %></div>
-        <div><%=  data[0]['color'] %></div>
-        <div><%=  data[0]['km'] %></div>
+        <h3 class="media-heading"><a target="_blank" href="<%= data.url %>"><%= data.title %></a></h3>
+        <div><%= number_to_currency(data.price,:unit => "$") %></div>
+        <div><%=  data.location %></div>
+        <div><%=  data.phone %></div>
+        <div><%=  data.comment %></div>
+        <div><%=  data.color %></div>
+        <div><%=  data.km %></div>
         <div class="offset3">
-          <a class="btn btn-mini" href="https://twitter.com/share?url=<%= data[0]['url'] %>" target="_blank" ><i class="icon-twitter"></i> Tweet</a>
-          <a class="btn btn-mini" href="http://www.facebook.com/share.php?u=<%= data[0]['url'] %>" target="_blank"><i class="icon-facebook"></i> Share</a>     
+          <a class="btn btn-mini" href="https://twitter.com/share?url=<%= data.url %>" target="_blank" ><i class="icon-twitter"></i> Tweet</a>
+          <a class="btn btn-mini" href="http://www.facebook.com/share.php?u=<%= data.url %>" target="_blank"><i class="icon-facebook"></i> Share</a>     
         </div>
       </div>
-      <!-- Modal -->
-    <div id="myModal<%=  data[0]['id'] %>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <img   src="<%= raw data[0]['image_big'] %>" width="540" />
-      </div>
-    </div>
-    <!-- Modal -->
 		</div>
   <% end %>
 	
