Se agregó el archivo para obtener todos los anuncios

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -8,6 +8,10 @@
  max-width: 100%; background-color: #E5E7DA; position:relative 
 }
 
+.container .large-12.advert-row{
+  display:table;
+}
+
 #new-advertise{
  background-color: #69D2E7;
  border:none;
