--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -6,9 +6,9 @@
   margin-top: 17px;
 }
 
-.second-bar h2{
+.second-bar h1{
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: bolder; font-size:25px;
   color: #555;
 }
 
