--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -34,4 +34,15 @@
   margin-top:0px;
 }
 
+.panel{
+ clear:both; 
+}
+
+/* Ads  */
+#ad-form{
+  margin-top: 13px;
+  margin-bottom: 13px;
+  float:left;
+}
+
 @import "partials/footer";
