--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,15 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
   <head>
   	<meta charset="utf-8" />
-
+    <meta name="keywords" content="venta de autos, autos seminuevos, comprar seminuevos" />
+    <meta name="description" content="Encuentra autos seminuevos mas facil, la mejor forma de buscar autos">
   	<!-- Uncomment to make IE8 render like IE7 -->
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
   	<!-- Set the viewport width to device width for mobile -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  	<title><%= content_for?(:title) ? yield(:title) : "Compra Venta de seminuevos" %></title>
 
   	<%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
