--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -8,10 +8,9 @@
       
       <div class="large-6 columns">
         <ul class="inline-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Buscar</a></li>
+          <li><a href="#">Contacto</a></li>
         </ul>
       </div>
       
