--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -3,11 +3,7 @@
     <ul class="title-area">
       <!-- Title Area -->
       <li class="name">
-        
-          <a href="#">
-            <img src="/assets/autly.png" width="120" />
-          </a>
-        
+          <%= link_to image_tag("autly.png", :width=>120), root_path %>
       </li>
       <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
     </ul>
@@ -16,7 +12,7 @@
 
 <div class="row second-bar">
   <div class="large-10 container">
-    <div class="small-8 columns"><h2>Busca, compra y vende mas fácil</h2></div>
+    <div class="small-8 columns"><h1>Busca, compra y vende autos mas fácil</h1></div>
     <div class="large-2 columns location"></div>
     <a href="#" id="new-advertise" class="button right">Anúnciate</a>
   </div>
