--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -159,7 +159,20 @@
       });
    });*/
   </script>
-  <div id="map"></div>
+
+  <div id="map">
+  	<div id="featured" data-orbit>
+	  <div>
+	    <img src="http://www.cmdl.com.hk/images/en/home-banner-130422.jpg" />
+	  </div>
+	  <div>
+	    <img src="http://revimedia.com/offers/wp-content/uploads/2010/09/1-page-v2-LIGHTER-button1.jpg" />
+	  </div>
+	  <div>
+	    <img src="http://ww1.prweb.com/prfiles/2013/06/30/11081327/Diminished%20Value%20of%20Georgia%20Loss%20in%20Value%20Banner.jpg" />
+	  </div>
+	</div>
+  </div>
 
   <%= render partial: "partials/form", locals: {marcas: @marcas, states: @states} %>
     
@@ -191,15 +204,15 @@
   <div class="large-12">
     <section>
       <div class="large-5 columns">
-        <h1>Autos seminuevos de Agencias y Lotes certificados</1>
+        <h1>Autos seminuevos de Agencias y Lotes certificados</h1>
         <p>
-          Venta de autos usados y seminuevos en Mexico
+          Vivamus sed ullamcorper elit. Duis tincidunt interdum risus. Proin porta vestibulum sagittis. Duis consectetur tempus ligula, vel vehicula purus mattis mattis. Donec velit odio, luctus vitae placerat sit amet, fringilla eu quam. 
         </p>
       </div>
       <div class="large-5 columns">
-        <h1>Autos nuevos y autos ussados</1>
+        <h1>Encuentra el mejor seguro para tu auto</h1>
         <p>
-          Encuentra autos y camionetas usadas, nuevas y seminuevas de todas marcas y modelos en venta.
+          Phasellus dignissim dui at justo egestas, eu tempus sem commodo. Nam pharetra, nisl nec pharetra rutrum, augue lacus cursus tellus, in pulvinar dui massa ac odio
         </p>
       </div>
     </section>
