--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="columns">
       
       <div class="large-6 columns">
-        <p>&copy; Copyright no one at all. Go to town.</p>
+        <p>&copy; robzdc.</p>
       </div>
       
       <div class="large-6 columns">
