Se agrego sesion mediante base de datos; Se arreglo el boton More;

--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -21,7 +21,7 @@
       </div>
 		</div>
   <% end %>
-	<div class="small-11 small-offset-1">
+	<div class="small-11 columns">
     <button data-make="<%= @marca %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block" value="1" type="button">More</button>
   </div>
 <% else %>
