Se agregaron las imagenes de marcas; Se agrego la gema yaml_db;

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1329,7 +1329,7 @@ $default-float: left;
 nav.top-bar ul li a{
   position:absolute;
   z-index: 999;
-  margin-left: 13px; margin-top: 7px;
+  margin-left: 13px; 
 }
 
 .top-bar{
