--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -3,7 +3,7 @@
     <ul class="title-area">
       <!-- Title Area -->
       <li class="name">
-          <%= link_to image_tag("autly.png", :width=>120), root_path %>
+          <%= link_to image_tag("autopy.png", :width=>200), root_path %>
       </li>
       <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
     </ul>
