--- a/app/views/partials/_form.html.erb
+++ b/app/views/partials/_form.html.erb
@@ -14,7 +14,11 @@ end
       
       <%= select_tag "make", options_from_collection_for_select(marcas, "id", "name", params['make']), :class => "medium", :prompt => "Selecciona una marca" %>
       
-      <%= select_tag "model", options_for_select([]), :class => "medium", :prompt => "Selecciona un modelo" %>   
+      <% if params["controller"] == "search" %>
+        <%= select_tag "model", options_from_collection_for_select(modelos, "id", "name", params["model"]), :class => "medium", :prompt => "Selecciona un modelo" %>  
+      <% else %>
+        <%= select_tag "model", options_for_select([]), :class => "medium", :prompt => "Selecciona un modelo" %>  
+      <% end %> 
       
       <%= select_tag "state", options_from_collection_for_select(states, "id","name", params['state']), :class => "medium", :prompt => "Selecciona un estado" %>
       
@@ -37,22 +41,22 @@ end
       
       <div id="top-makes" class="small-12 columns" style="padding-right: 0px;float: left;padding-left: 0px;clear: both;">   
         <div class="large-4">
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511270&size=50" style="padding-left: 0px; margin-left: 0px; margin-right: 10px; cursor: pointer;" />
+          <%= link_to image_tag("chevrolet.png"), "search?make=4" %>
         </div>
         <div class="large-4" >
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511330&amp;size=50" style="margin-left: 10px; cursor: pointer;" />
+          <%= link_to image_tag("chrysler.png"), "search?make=5" %>
         </div>
         <div class="large-4">
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511273&amp;size=50" style="float: right; cursor: pointer;" />
+          <%= link_to image_tag("dodge.png"), "search?make=6" %>
         </div>
         <div class="large-4">
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511282&size=50" style="padding-left: 0px; margin-left: 0px; margin-right: 10px; margin-top: 10px; cursor: pointer;" />
+          <%= link_to image_tag("ford.png"), "search?make=8" %>
         </div>
         <div class="large-4">
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511289&size=50" style="margin-left: 10px;  margin-top: 10px; cursor: pointer;" />
+          <%= link_to image_tag("honda.png"), "search?make=9" %>
         </div>
         <div class="large-4">
-          <img src="http://www.easyicon.net/api/resize_png_new.php?id=511290&size=50" style="float: right; margin-top: 10px; cursor: pointer;" />
+          <%= link_to image_tag("vw.png"), "search?make=27" %>
         </div>
       </div>
     <% end %>
