Se modifico el script de scraping( se quito el id del estado); Se agrego links al footer;

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -50,15 +50,20 @@
   <div class="large-12">
     <section>
       <div class="large-5 columns">
-        <h1>Autos seminuevos de Agencias y Lotes certificados</h1>
+        <h1>Busca y encuentra</h1>
         <p>
-          Vivamus sed ullamcorper elit. Duis tincidunt interdum risus. Proin porta vestibulum sagittis. Duis consectetur tempus ligula, vel vehicula purus mattis mattis. Donec velit odio, luctus vitae placerat sit amet, fringilla eu quam. 
+          En <b>autopy.com</b> te facilitamos la busqueda de ese auto que quieres estrenar.<br />
+          Busca miles de anuncios en México en una sola pagina.
         </p>
       </div>
       <div class="large-5 columns">
-        <h1>Encuentra el mejor seguro para tu auto</h1>
+        <h1>Próximamente</h1>
         <p>
-          Phasellus dignissim dui at justo egestas, eu tempus sem commodo. Nam pharetra, nisl nec pharetra rutrum, augue lacus cursus tellus, in pulvinar dui massa ac odio
+          <ul>
+            <li>Encuentra el mejor seguro para tu auto.</li>
+            <li>Encuentra el mejor lugar para rentar un auto en México.</li>
+            <li>Necesitas lavar tu auto? Encuentra el lugar mas cercano para hacerlo.</li>
+          </ul>
         </p>
       </div>
     </section>
