--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -8,9 +8,9 @@
       
       <div class="large-6 columns">
         <ul class="inline-list right">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Buscar</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><%= link_to "Inicio",root_path %></li>
+          <li><%= link_to "Buscar",search_path %></li>
+          <li><%= link_to "Contacto",root_path %></li>
         </ul>
       </div>
       
