Se volvio a modificar el controlador Search (se agrego los datos al boton More)

--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -22,7 +22,7 @@
 		</div>
   <% end %>
 	<div class="large-11 right columns">
-    <button data-make="<%= @marca %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block right" value="1" type="button">More</button>
+    <button data-make="<%= @marca %>" data-model="<%= @modelo %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block right" value="1" type="button">More</button>
   </div>
 <% else %>
 		<div class="panel large-11 right">
