Se agrego pagina de contacto y mailer; Se agrego Capistrano

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1389,6 +1389,10 @@ h3{
   max-height: 600px;
 }
 
+.orbit-container {
+  background: #E5E7DA;
+}
+
 .orbit-container .orbit-timer{
   display:none !important;
 }
