--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,9 +1,3 @@
-<!-- Navigation -->
- 
-<%= render "partials/header" %> 
-
-<!-- End Top Bar -->
-
 <!-- Map -->
 <div class="row big-map">
   <div id="map">
@@ -47,31 +41,28 @@
     </div>
   </div>
   
-  <div class="large-12">
-    <section>
-      <div class="large-5 columns">
-        <h1>Busca y encuentra</h1>
-        <p>
-          En <b>autopy.com</b> te facilitamos la busqueda de ese auto que quieres estrenar.<br />
-          Busca miles de anuncios en México en una sola pagina.
-        </p>
-      </div>
-      <div class="large-5 columns">
-        <h1>Próximamente</h1>
-        <p>
-          <ul>
-            <li>Encuentra el mejor seguro para tu auto.</li>
-            <li>Encuentra el mejor lugar para rentar un auto en México.</li>
-            <li>Necesitas lavar tu auto? Encuentra el lugar mas cercano para hacerlo.</li>
-          </ul>
-        </p>
-      </div>
-    </section>
-  </div>
-  
 </div>
 </div>
 
-<!-- Footer -->
-
-<%= render "partials/footer" %> 
+<div class="row third-row">
+  <div class="large-10">
+      <section>
+        <div class="large-5 columns">
+          <h1>Busca y encuentra</h1>
+          <p>
+            En <b>autopy.com</b> te facilitamos la busqueda de ese auto que quieres estrenar.<br />
+            Busca miles de anuncios en México en una sola pagina.
+          </p>
+        </div>
+        <div class="large-5 columns">
+          <h1>Próximamente</h1>
+          <p>
+            <ul>
+              <li>Encuentra el mejor seguro para tu auto.</li>
+              <li>Encuentra el mejor lugar para rentar un auto en México.</li>
+            </ul>
+          </p>
+        </div>
+      </section>
+    </div>
+</div>
