--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,14 +3,14 @@
     <div class="columns">
       
       <div class="large-6 columns">
-        <p>&copy; robzdc.</p>
+        <p>&copy; autopy.com</p>
       </div>
       
       <div class="large-6 columns">
         <ul class="inline-list right">
           <li><%= link_to "Inicio",root_path %></li>
           <li><%= link_to "Buscar",search_path %></li>
-          <li><%= link_to "Contacto",root_path %></li>
+          <li><%= link_to "Contacto",contacto_path %></li>
         </ul>
       </div>
       
