--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -14,6 +14,6 @@
   <div class="large-10 container">
     <div class="small-8 columns"><h1>Busca, compra y vende autos mas fácil</h1></div>
     <div class="large-2 columns location"></div>
-    <a href="#" id="new-advertise" class="button right">Anúnciate</a>
+    <%= link_to "Anúnciate", contacto_path, class: "button right", id: "new-advertise" %>
   </div>
 </div>
