--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,7 @@
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
- *
+ * 
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
  * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
  *
@@ -11,7 +11,7 @@
  *= require_self
  *= require foundation
  *= require foundation_and_overrides
- *= require_tree .
+ *= require_tree ./partials
  */
 
 @import url(http://fonts.googleapis.com/css?family=Lato);
